<?xml version="1.0" encoding="utf-8"?>
    <android.support.v7.widget.RecyclerView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryDark"
        android:padding="@dimen/widget_8dp"
        tools:context=".MainActivity"
        android:scrollbars="vertical"
        android:id="@+id/recycler_view"
        tools:ignore="Overdraw" />
